# access-protocol

./: .gitignore  README.md
backends/: README.md
backends/go/: Dockerfile  README.md  go.mod  go.sum  main.go
backends/go/db/: redis.go
backends/go/routes/: articles.go  auth.go
backends/go/types/: types.go
backends/go/utils/: jwt.go  nonce.go  redis.go  stake.go
backends/js/: README.md  ecosystem.config.js  package.json  tsconfig.json
backends/js/src/: index.ts  run.ts
backends/js/tests/: stake.mocks.ts  stake.test.ts  stake_end_to_end.test.ts  utils.ts
backends/python/: Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt  setup.cfg
backends/python/src/: __init__.py  app.py  errors.py  main.py  redis.py  redis_client.py  routes.py  utils.py  validate_req.py
backends/rust/: Cargo.toml
backends/rust/src/: errors.rs  main.rs
backends/rust/src/routes/: article.rs  auth.rs  mod.rs
backends/rust/src/structs/: api_response.rs  app_data.rs  auth.rs  mod.rs
backends/rust/src/utils/: jwt.rs  mod.rs  nonce.rs  pubkey.rs  request.rs  settings.rs  stake.rs
frontend/: package.json  tsconfig.json
frontend/src/: App.tsx  Routes.tsx  index.tsx
frontend/src/components/: AdminMintCard.tsx  AllBonds.tsx  AllPoolsCard.tsx  BondCard.tsx  Card.tsx  CentralStateCard.tsx  CreateBondCard.tsx  EditInflation.tsx  NavigationFrame.tsx  TopBar.tsx
frontend/src/hooks/: auth.tsx  useAllBonds.tsx  useAllPools.tsx  useBondInfo.tsx  useCentralState.tsx  usePoolInfo.tsx  useStakeAccount.tsx  useTotalSupply.tsx
frontend/src/pages/: AdminMint.tsx  AdminPage.tsx  AllPools.tsx  BondPage.tsx  CentralState.tsx  ClaimBond.tsx  ClaimBondRewards.tsx  ClaimStakePoolRewards.tsx  ClaimStakeRewards.tsx  CreateBond.tsx  CreatePool.tsx  HomePage.tsx  InspectPool.tsx  JWT.tsx  SignBond.tsx  Stake.tsx  UnlockBondTokens.tsx
frontend/src/utils/: SnackbarUtils.tsx  api.tsx  fetch-loop.tsx  notifications.tsx  send.tsx
scripts/: README.md  codama-idl.ts  create-devnet-spl-token.ts  create-metadata.ts  create-spl-token.ts  deploy-contract.sh  deploy-full-devnet.sh  drop-bond-v2.sh  drop-bond-v2.ts  idl-upload.sh  init-central-state.sh  init-central-state.ts  ledger-transfer-program-authority.sh  migrate-central-state-v2.sh  migrate-central-state-v2.ts  migrate_full.sh  package-lock.json  package.json  spl-mint.sh  spl-set-authority.sh  spl-set-authority.ts  squads-update.sh
smart-contract/cranker/: Cargo.toml
smart-contract/cranker/src/: crank.rs  distribute_fees.rs  error.rs  main.rs  pools.rs  settings.rs  utils.rs
smart-contract/idl/: access_protocol.json  codama-idl.json  idl-upload.sh
smart-contract/js/: .ammanrc.cjs  README.md  compile-mpl-token-metadata-program.sh  fixup.sh  jest.config.cjs  package-lock.json  package.json  run-tests.sh  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
smart-contract/js/src/: bindings.ts  index.ts  init_central_state.ts  raw_instructions.ts  secondary_bindings.ts  state.ts  u64.ts  utils.ts  v1_bindings.ts
smart-contract/js/tests/: chai.ts  change-central-state-auth.ts  end_to_end.test.ts  poc.ts  utils.ts
smart-contract/nft-subscriptions/: .gitignore  Cargo.toml
smart-contract/nft-subscriptions/src/: entrypoint.rs  error.rs  instruction.rs  instruction_auto.rs  lib.rs  processor.rs  state.rs  utils.rs
smart-contract/nft-subscriptions/tests/: basic.rs
smart-contract/program/: Cargo.toml  Makefile
smart-contract/program/src/: cpi.rs  entrypoint.rs  error.rs  instruction.rs  instruction_auto.rs  lib.rs  processor.rs  state.rs  utils.rs
smart-contract/program/src/processor/: activate_stake_pool.rs  add_to_bond_v2.rs  admin_change_freeze_authority.rs  admin_freeze.rs  admin_mint.rs  admin_program_freeze.rs  admin_renounce.rs  admin_set_protocol_fee.rs  admin_setup_fee_split.rs  change_central_state_authority.rs  change_inflation.rs  change_pool_minimum.rs  change_pool_multiplier.rs  claim_bond.rs  claim_bond_rewards.rs  claim_bond_v2_rewards.rs  claim_pool_rewards.rs  claim_rewards.rs  close_royalty_account.rs  close_stake_account.rs  close_stake_pool.rs  cpi_claim_bond_v2_rewards.rs  cpi_claim_rewards.rs  crank.rs  create_bond.rs  create_bond_v2.rs  create_central_state.rs  create_royalty_account.rs  create_stake_account.rs  create_stake_pool.rs  distribute_fees.rs  edit_metadata.rs  execute_unstake.rs  migrate_central_state_v2.rs  migrate_stake_pool_v2.rs  sign_bond.rs  stake.rs  unlock_bond_tokens.rs  unlock_bond_v2.rs  unstake.rs
smart-contract/program/tests/: basic_functionality.rs  bonds.rs  claim-before-crank.rs  common_stake_limit.rs  common_unstake_limit.rs  devnet.rs  end_to_end.rs  fee_split.rs  flows.rs  freeze_and_renounce.rs  full.rs  functional.rs  later_creations.rs  mainnet.rs  overflow.rs  pool_settings.rs  pool_setup.rs  pool_upgrade.rs  protocol_fee.rs  renounce.rs  repeated_claim.rs  rewards_bonds.rs  rewards_wrap.rs  royalties.rs  unit.rs  v1_bonds.rs  v1_v2_migration.rs  v2_bonds.rs
smart-contract/program/tests/basic/: mod.rs
smart-contract/program/tests/common/: mod.rs  test_runner.rs  utils.rs
smart-contract/program/tests/common/v1_contract/: README.md  cpi.rs  entrypoint.rs  error.rs  instruction.rs  instruction_auto.rs  lib.rs  mod.rs  processor.rs  state.rs  utils.rs
smart-contract/program/tests/common/v1_contract/processor/: activate_stake_pool.rs  admin_freeze.rs  admin_mint.rs  change_central_state_authority.rs  change_inflation.rs  change_pool_minimum.rs  change_pool_multiplier.rs  claim_bond.rs  claim_bond_rewards.rs  claim_pool_rewards.rs  claim_rewards.rs  close_stake_account.rs  close_stake_pool.rs  crank.rs  create_bond.rs  create_central_state.rs  create_stake_account.rs  create_stake_pool.rs  edit_metadata.rs  sign_bond.rs  stake.rs  unlock_bond_tokens.rs  unstake.rs
smart-contract/program/tests/fixtures/: mpl_token_metadata-keypair.json
(+19 files in other folders)
