[metadata]
name = python-backend
version = 0.0.1
author = Bonfida
author_email = lucas@bonfida.com
description = A python backend for the authentication of users
url = https://github.com/Bonfida/the-block
project_urls =
    Bug Tracker = https://github.com/Bonfida/the-block/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src