[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.133"
rand = "0.8.4"
redis = {version = "0.21.4", features = ["tokio-comp"]}
jwt = "0.16.0"
solana-program = "1.8.0"
hex = "0.4.3"
serde_json = "1.0.74"
futures = "0.3.19"
nacl = "0.5.3"
actix-cors = "0.5.4"
hmac = "0.12.0"
sha2 = "0.10.1"
derive_more = "0.99.17"