[package]
name = "access-cranker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.9"
solana-client = "1.9.9"
solana-sdk = "1.9.9"
solana-account-decoder = "1.9.9"
access-protocol = {path = "../program", features = ["no-entrypoint"]}
tokio = "1.17.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"