[package]
name = "access-cranker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.30"
solana-client = "1.10.30"
solana-sdk = "1.10.30"
solana-account-decoder = "1.10.30"
access-protocol = {path = "../program", features = ["no-entrypoint"]}
tokio = "1.14.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
borsh = "0.9.1"
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
spl-token = {version="3.3.0", features= ["no-entrypoint"]}
