[package]
name = "access-protocol"
version = "0.7.3"
edition = "2018"
description = "Access Protocol"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
no-mint-check = []
days-to-sec-10s = []
days-to-sec-15m = []
no-bond-signer = []
claim-bond-rewards-off = []
v1-instructions-allowed = []

[dependencies]
borsh = "0.10.3"
solana-program = "1.16.16"
num_enum = "0.5.4"
thiserror = "1.0.24"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.1"
spl-token = {version="3.3.0", features= ["no-entrypoint"]}
bonfida-utils = "0.4.0"
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
bytemuck = {version = "1.7.2", features = ["derive"]}
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
spl-math = {version="0.1.0", features= ["no-entrypoint"]}

[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.10.30"
rand = "0.8.4"
arrayref = "0.3.6"
solana-client = "1.10.0"
solana-program-test = "1.10.12"
tokio = {version="1.6", features = ["macros"]}
solana-test-framework = { git = "https://github.com/halbornteam/solana-test-framework"}


[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
